[gd_scene load_steps=2 format=3 uid="uid://b40uikdgqm2tx"]

[ext_resource type="Script" path="res://Scenes/AttackForecast/Code/attackForecast.gd" id="1_hhn4l"]

[node name="AttackForecast" type="Button"]
offset_right = 100.0
offset_bottom = 100.0
script = ExtResource("1_hhn4l")

[node name="AttackIcon" type="TextureRect" parent="."]
custom_minimum_size = Vector2(90, 90)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
